fix player collapse

--- a/src/public/scss/_player.scss
+++ b/src/public/scss/_player.scss
@@ -27,13 +27,15 @@
 }
 
 .player-icon {
-  margin-top: -150px;
+  margin-top: -110px;
   margin-left: 20px;
   width: 220px;
   >img {
     position: relative;
     z-index: 100;
     width: calc(100% - 8px);
+    height: 212px;
+    object-fit: cover;
     margin-bottom: 20px;
     border: 4px solid white;
     border-radius: 20px;
@@ -54,27 +56,47 @@
 
   @media screen and (max-width: 896px) {
     margin-top: -80px;
-    width: 150px;
-
+    width: 170px;
+    >img {
+      height: 170px;
+    }
     >.sns-share img {
       width: 30px;
     }
   }
 
   @media screen and (max-width: 600px) {
+    position: relative;
+    margin-top: -100px;
+    margin-left: 5%;
     display: flex;
-    top: -100px;
-    left: calc(50% - 75px);
-    margin: 0;
-
+    width: calc(50% - 20px);
     >img {
       margin: 0;
+      height: calc(50vw - 20px);
+      max-height: 200px;
     }
-
     >.sns-share {
       justify-content: space-around;
       flex-direction: column;
       margin-left: 15px;
+    }
+  }
+}
+
+.profile-tag {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  .tag a {
+    font-size: 14px;
+    >span {
+      background-color: #F8F9FF;
+    }
+    &:after {
+      left: initial;
+      right: 0;
+      border-color: transparent #F8F9FF transparent transparent;
     }
   }
 }
@@ -115,11 +137,14 @@
       line-height: 1;
     }
   }
+  @media screen and (max-width: 896px) {
+    margin-left: 30px;
+  }
   @media screen and (max-width: 600px) {
     position: relative;
-    top: -80px;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
     width: 90%;
+    max-width: initial;
     .sp {
       display: block;
     }
@@ -136,7 +161,7 @@
     margin: 20px auto 20px auto;
     padding: 10px 20px;
     max-width: 400px;
-    width: 100%;
+    width: calc(100% - 80px);
     >h4 {
       color: #FFA462;
       margin: 15px 0 30px;
